tests/errors/sem.out-of-order.struct-init-field.or
main :: () -> void {
    T ::  struct { x := 0; y := 0; };
    T.{, x: 20};
};
